--- a/index.html
+++ b/index.html
@@ -47,6 +47,16 @@
       text-align: center;
       margin-top: 16px;
     }
+
+    @media screen and (max-width: 768px){
+      .convert {
+        flex-direction: column;
+      }
+
+      textarea {
+        width: 95%;
+      }
+    }
   </style>
 </head>
 
